--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,6 @@
 dependencies:
   cache_directories:
-    - loksh
-    - musl
+    - $HOME/.m2/repository
 
   pre:
     - sh -e misc/circle-setup.sh
@@ -9,4 +8,4 @@ dependencies:
 ## Customize test commands
 test:
   override:
-    - sh -e tests/test-shell.sh || sh -ex tests/test-shell.sh
+    - sh -e misc/runtest.sh
