--- a/circle.yml
+++ b/circle.yml
@@ -1,11 +1,11 @@
 dependencies:
   cache_directories:
-    - $HOME/.m2/repository
+    - .m2/repository
 
   pre:
-    - sh -e misc/circle-setup.sh
+    - sh -ex misc/ci-setup.sh
 
 ## Customize test commands
 test:
   override:
-    - sh -e misc/runtest.sh
+    - sh -ex misc/ci-runtest.sh
