--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ matrix:
 env:
     - COVERAGE=1 DEBUG=1 
     - COVERAGE=1
+    - COVERAGE=0
 cache:
   directories:
     - $HOME/.m2/repository
@@ -16,8 +17,6 @@ before_install:
 install:
   - gem install coveralls
   - gem install bashcov
-  - sudo gem update --system
-  - bundle install
   - sh -e misc/ci-setup.sh
 
 script:
