--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
   - gem install coveralls
   - gem install bashcov
   - gem regenerate_binstubs
+  - echo $GEM_HOME
   - source $(rvm 1.9.3 do rvm env --path)
   - sh -e misc/ci-setup.sh
 
