Move to spf-tools organization
https://github.com/spf-tools/spf-tools

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/jsarenik/spf-tools
+    working_directory: ~/spf-tools
     parallelism: 1
     shell: /bin/sh --login
     environment:
