--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,20 +8,19 @@ jobs:
       CIRCLE_ARTIFACTS: /tmp/circleci-artifacts
       CIRCLE_TEST_REPORTS: /tmp/circleci-test-results
     docker:
-    - image: alpine
-      command: /sbin/init
+      - image: alpine:3.7
     steps:
-    - checkout
-    - run: mkdir -p $CIRCLE_ARTIFACTS $CIRCLE_TEST_REPORTS
-    - run: apk --no-progress update
-    - run: apk --no-progress upgrade
-    - run: apk --no-progress add diffutils coreutils sed grep
-    - run: apk --no-progress add bash mksh dash loksh mksh
-    - run: sh -ex misc/ci-setup.sh
-    - run: sh -ex misc/ci-runtest.sh
-    - store_test_results:
-        path: /tmp/circleci-test-results
-    - store_artifacts:
-        path: /tmp/circleci-artifacts
-    - store_artifacts:
-        path: /tmp/circleci-test-results
+      - run: mkdir -p $CIRCLE_ARTIFACTS $CIRCLE_TEST_REPORTS
+      - run: apk --no-progress update
+      - run: apk --no-progress upgrade
+      - run: apk --no-progress add diffutils coreutils sed grep openssh-client git
+      - run: apk --no-progress add bash mksh dash loksh mksh
+      - checkout
+      - run: sh -ex misc/ci-setup.sh
+      - run: sh -ex misc/ci-runtest.sh
+      - store_test_results:
+          path: /tmp/circleci-test-results
+      - store_artifacts:
+          path: /tmp/circleci-artifacts
+      - store_artifacts:
+          path: /tmp/circleci-test-results
