--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 #language: shell
 language: ruby
 rvm:
- - 2.3.0
+ - 2.6
 matrix:
 env:
     - COVERAGE=1
@@ -14,11 +14,10 @@ before_install:
   - sudo apt-get update -qq
 
 install:
-  - gem install coveralls
+  - gem install coveralls --version 1.8.2 --no-format-exec
   - gem install bashcov
   - gem regenerate_binstubs
   - echo $GEM_HOME
-  - source $(rvm 2.3.0 do rvm env --path)
   - sh -e misc/ci-setup.sh
 
 script:
